<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list_row"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/common_google_signin_btn_text_light_pressed"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/buy_rent_daily"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/type"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/new_old"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/number_of_rooms"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/area"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/level"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/price"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/holo_blue_dark"
            android:textSize="12sp" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
</LinearLayout>